ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: ingress
   kubernetes.io/ingress.global-static-ip-name: "air-imayou-ip"
   labels:
       app: ingress
spec:
 rules:
 - http:
     paths:
     - path: /
       backend:
         serviceName: air-imayou-server
         servicePort: 8080
